# trix

./: AGENTS.md  CHANGELOG.md  Cargo.toml  dist-workspace.toml  package-lock.json  run-integration-tests.sh
.github/actions/setup/: action.yml
.github/workflows/: publish.yml  test.yml
.human/: 002-metrics-telemetry-design.md  002-otlp-telemetry-spec.md
design/: 001-trix-config.md  002-lightweight-telemetry.md  003-ai-aiken-vulnerability-scaffolding.md  003-protocol-dependencies.md  003-protocol-interfaces.md  004-audit-implementation-spec.md  004-toolchain-delegation.md  005-aiken-ast-validator-context.md  005-protocol-logos.md  006-heuristic-audit-provider-minimal.md
design/003-assets/: README.md  c4-component.puml  c4-container.puml  c4-context.puml
docs/superpowers/plans/: 2026-05-05-extract-audit-to-preflight.md
docs/superpowers/specs/: 2026-05-05-extract-audit-to-preflight-design.md
examples/aiken/: offchain.tx3
examples/aiken/onchain/: aiken.toml  plutus.json
examples/aiken/onchain/validators/: always_true.ak
examples/basic/: main.tx3  trix.toml
examples/devnet/: devnet.toml  trix.toml
examples/full/: trix.toml
examples/registry/: README.md  trix.toml
examples/test/: README.md  devnet.toml  trix.toml
examples/test/tests/: basic.toml
examples/v1/: devnet.toml  trix.toml
examples/v1/.tx3/devnet/: v1-demo.tii
skills/trix-cli-conventions/: SKILL.md
skills/trix-e2e-testing/: SKILL.md
skills/vulnerabilities/: 001-state-transition.md  001-strict-value-equality.md  002-authz-boundaries.md  002-missing-address-validation.md  003-strict-value-equality.md  003-unvalidated-datum.md
src/: builder.rs  cli.rs  config.rs  dirs.rs  global.rs  home.rs  lib.rs  main.rs  oci.rs  refs.rs  telemetry.rs  update_checker.rs  updates.rs  wallet.rs
src/commands/: audit.rs  bindgen.rs  build.rs  bytecode.rs  check.rs  codegen.rs  codegen_legacy.rs  devnet.rs  expect.rs  explore.rs  identities.rs  init.rs  invoke.rs  keys.rs  mod.rs  publish.rs  telemetry.rs  test.rs  wallet.rs  wallet_connect.rs
src/commands/aiken/: analyze.rs  audit.rs  mod.rs  model.rs  provider.rs
src/commands/audit/: ast.rs  mod.rs  model.rs
src/commands/audit/providers/: anthropic.rs  heuristic.rs  heuristic_detectors.rs  mod.rs  openai.rs  scaffold.rs  shared.rs
src/commands/devnet/: copy.rs  devnet.rs  explore.rs  invoke.rs  mod.rs  new.rs
src/commands/inspect/: imports.rs  mod.rs  scope.rs  tir.rs
src/commands/profile/: list.rs  mod.rs  show.rs
src/commands/templates/configs/cshell/: cshell.toml
src/commands/templates/configs/dolos/: dolos.toml
src/commands/templates/gen-typescript/: package.json.tpl  test.ts.tpl
src/commands/use_cmd/: mod.rs  view.rs
src/config/: convention.rs  mod.rs  model.rs  serde.rs
src/dependencies/: mod.rs  resolve.rs
src/devnet/: mod.rs
src/devnet/test_data/: devnet.toml
src/interfaces/: attestation.rs  manifest.rs  mod.rs  oci.rs  repository.rs  resolve.rs
src/spawn/: compat.rs  cshell.rs  dolos.rs  mod.rs  preflight.rs  tx3c.rs
src/telemetry/: client.rs  fingerprint.rs  mod.rs
src/templates/: wallet_connect.html
src/templates/configs/cshell/: cshell.toml
src/templates/configs/dolos/: dolos.toml
src/templates/tx3/: test.toml.tpl
templates/: wallet_connect.html
templates/aiken/: audit_agent_initial_user_prompt.md  audit_agent_system_prompt.md  audit_agent_tool_result_prompt.md  permission_prompt.md  report.md
templates/configs/cshell/: cshell.toml.askama
templates/configs/dolos/: dolos.toml
templates/profile/: list.md  show.md
templates/use/: added.md
tests/: README.md
tests/e2e/: audit_wrapper.rs  codegen_deps.rs  edge_cases.rs  happy_path.rs  mod.rs  smoke.rs  use_command.rs
tests/e2e/fixtures/codegen-template/: bindings.txt.hbs
tests/e2e/fixtures/use-stub/acme/widget/0.1.0/: README.md  main.tii  main.tx3  metadata.json
tests/infra/: Makefile  config.alloy
