[package]
name = "trix"
description = "The Tx3 package manager"
version = "0.5.2"
edition = "2024"
repository = "https://github.com/tx3-lang/trix"
homepage = "https://github.com/tx3-lang/trix"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tx3-lang = "0.3.0"
tx3-bindgen = "0.3.0"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
inquire = "0.7.5"
dirs = "6.0.0"
serde_json = "1.0.140"
cryptoxide = "0.5.0"
pallas = "0.32.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
