[package]
name = "trix"
description = "The Tx3 package manager"
version = "0.19.3"
edition = "2024"
repository = "https://github.com/tx3-lang/trix"
homepage = "https://github.com/tx3-lang/trix"

[dependencies]
tx3-lang = "0.14.2"
# tx3-lang = { path = "../tx3/crates/tx3-lang" }
# tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }

tx3-tir = "0.14.2"
# tx3-tir = { path = "../tx3/crates/tx3-tir" }
# tx3-tir = { git = "https://github.com/tx3-lang/tx3.git" }

utxorpc = "0.12.0"
# utxorpc = { git = "https://github.com/utxorpc/rust-sdk.git" }
# utxorpc = { path = "../../utxorpc/rust-sdk" }

dolos-core = { git = "https://github.com/txpipe/dolos.git" }

# dolos-core = { path = "../dolos/crates/core" }
# dolos-cardano = { path = "../dolos/crates/cardano" }
# dolos-redb = { path = "../dolos/crates/redb" }

pallas = "1.0.0-alpha.3"

clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
inquire = "0.7.5"
dirs = "6.0.0"
serde_json = "1.0.140"
cryptoxide = "0.5.0"
hex = { version = "0.4.3", features = ["serde"] }
handlebars = "6.3.2"
reqwest = { version = "0.12.15", features = ["json"] }
tempfile = "3.10"
zip = "3.0.0"
convert_case = "0.8.0"
oci-client = "0.15.0"
chrono = "0.4.41"
futures = "0.3.31"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
ed25519-bip32 = "0.4.1"
bip39 = "2.1.0"
octocrab = "0.44"
serde_with = "3.14.0"
askama = "0.14.0"
prost = "0.13"
tracing = "0.1"
tokio-util = "0.7"
tracing-subscriber = "0.3.22"

[features]
unstable = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
